Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-50930

[Performance REG] Painting gradients much slower due to converting RGBA64->RGBA32

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 5.6.1
    • 5.6.0 Beta
    • GUI: Painting
    • None
    • Linux/X11, CPU: i7 3770k OC 4.1GHz

      Painting gradients (software rasterizer) are much slower due to converting RGBA64->RGBA32. The performance issue is caused by converting color table using "toArgb32()" instead of using 32bit cached table. On FullHD painting can be more than 2x slower than Qt4.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            allan.jensen Allan Sandfeld Jensen
            zaps166 Błażej Szczygieł
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes