src/gui/painting/qdrawhelper.cpp
@@ -27733,7 +27733,7 @@ decl_stmt|;
 return|return
 name|data
 operator|->
-name|colorTable
+name|colorTable32
 index|[
 name|qt_gradient_clamp
 argument_list|(
@@ -27742,9 +27742,6 @@ argument_list|,
 name|ipos
 argument_list|)
 index|]
-operator|.
-name|toArgb32
-argument_list|()
 return|;
 block|}
 end_function
@@ -27783,7 +27780,7 @@ decl_stmt|;
 return|return
 name|data
 operator|->
-name|colorTable
+name|colorTable64
 index|[
 name|qt_gradient_clamp
 argument_list|(
